reunion.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;entertainment",
  "char_count": 17711,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.17,
  "homepage_snapshot_redirected_domain": "reunion.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401184117id_/http://www.reunion.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401184117id_/http%3A//reunion.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "reunion.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615020011id_/http%3A//www.reunion.com/site-root/privacypolicy.jsp",
  "policy_title": "Reunion.com - Reunite With Old High School Friends and Old Flames Today!",
  "policy_url": "reunion.com/site-root/privacypolicy.jsp",
  "sha1": "022113f8bab42536bf2d213cc9bbdeef921eb6b9",
  "simhash": 11313063135911950134,
  "simhash_updated": true,
  "site_hostname": "reunion.com",
  "site_url": "http://reunion.com",
  "smog": 15.34,
  "strict_updated": true,
  "timestamp": "20060615020011",
  "word_count": 2893,
  "year": 2006
}

--- a/r/re/reu/reunion.com.html
+++ b/r/re/reu/reunion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the reunion.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216111453id_/http%3A//www.reunion.com/site-root/privacypolicy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the reunion.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615020011id_/http%3A//www.reunion.com/site-root/privacypolicy.jsp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Reunion.com - Reunite With Old High School Friends and Old Flames Today!</title>
@@ -12,7 +12,7 @@ document.write("<div align=\"center\"><center><table border=\"0 ");
 document.write("cellpadding=\"0\" cellspacing=\"0\"> ");
 document.write("<tr><td align=\"center\"><hr noshade size=\"1\" color=\"#C0C0C0\"> ");
 document.write("</td></tr><tr><td align=\"center\"><font face=\"Verdana\" size=\"1\">");
-document.write("Copyright &#169; 2005, <b>Reunion.com Inc</b><br> ");
+document.write("Copyright &#169; 2006, <b>Reunion.com Inc</b><br> U.S. Patent No. 6,701,348 and 6,694,353<br />");
 document.write("<a href=\"http://www.reunion.com/site-root/aboutus.jsp\">About Us");
 
 document.write("</a> | <a href=\"http://www.reunion.com/site-root/advertising.jsp\"> ");
@@ -415,21 +415,35 @@ init('lnk0','lyr0')
 
 <table cellpadding="0" cellspacing="0" border="0" width="760" align="center">
 	<tbody><tr>
-		<td>
-							<div class="nav_off_left"><img src="/images/t.gif" width="10" alt="" border="0"></div>
-						
-			<div class="nav_off" style="width: 44px; text-align: left;"><a href="/home.do">Home</a></div><div class="nav_on_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off" style="width: 59px;"><a href="/mail.do">Mail</a>
-							</div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off" style="width: 105px;"><a href="/addressBook.do">Address Book</a></div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off" style="width: 53px;"><a href="/invite.do">Invite</a></div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off" style="width: 81px;"><a href="/displayProfile.do">My&nbsp;Profile</a></div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off" style="width: 121px;"><a href="/messages.do">Message&nbsp;Boards</a></div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off" style="width: 109px;"><a href="/people.do">People&nbsp;Search</a></div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off" style="width: 61px;"><a href="/help.do"><img src="/images/topbar/help_icon.gif" style="margin-top: 9px; " border="0" alt="">&nbsp;Help</a></div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
-			<div class="nav_off"><img src="/images/t.gif" width="90" height="1" border="0" alt=""></div>
+<td>
+			<div class="nav_on_left"><img src="/images/t.gif" width="10" alt="" border="0"></div>
+			
+			<div class="nav_on" style="width: 50px; text-align: left;"><a href="/home.do">Home</a></div>
+			<div class="nav_on_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			
+			<div class="nav_off" style="width: 65px;"><a href="/mail.do">Mail</a></div>
+			<div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			
+			<div class="nav_off" style="width: 112px;"><a href="/addressBook.do">Address Book</a></div>
+			<div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			
+			<div class="nav_off" style="width: 88px;"><a href="/displayProfile.do">My&nbsp;Profile</a></div>
+			<div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			
+			<div class="nav_off" style="width: 88px;"><a href="/photo/album/update.do">My&nbsp;Photos</a></div>
+			<div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			
+			<div class="nav_off" style="width: 128px;"><a href="/messages.do">Message&nbsp;Boards</a></div>
+			<div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			
+			<div class="nav_off" style="width: 116px;"><a href="/people.do">People&nbsp;Search</a></div>
+			<div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			
+			<div class="nav_off" style="width: 67px;"><a href="/help.do"><img src="/images/topbar/help_icon.gif" style="margin-top: 9px; " border="0" alt="">&nbsp;Help</a></div><div class="nav_off_border"><img src="/images/t.gif" width="2" alt="" border="0"></div>
+			<div class="nav_off"><img src="/images/t.gif" width="7" height="1" border="0" alt=""></div>
+			
 			<div class="nav_off_right"><img src="/images/t.gif" width="10" border="0" alt=""></div>
-		</td>
+</td>
 	</tr>
 	<tr>
 		<td style="background-image:url('images/topbar/nav_shad.jpg'); background-repeat: repeat-x;"><img src="/images/t.gif" height="7" width="1" border="0"></td>
@@ -452,9 +466,12 @@ init('lnk0','lyr0')
       <td bgcolor="#FFFFFF" valign="top" align="center" colspan="3">
       <!------------  BEGIN MAIN CONTENT BLOCK   -------------->
       <table border="0" cellspacing="0" cellpadding="5" width="100%">
-        <tbody><tr><td bgcolor="#FFFFFF" colspan="3" class="ProfExLgHead"><b>Privacy
-            Policy</b>
-	  </td></tr>
+        <tbody><tr>
+			<td bgcolor="#FFFFFF" colspan="3" class="ProfExLgHead"><b>Privacy Policy</b></td>
+		</tr>
+		<tr>
+			<td align="right"><a class="ProfBodyBlk" href="javascript:history.go(-1)">&lt;&lt; Back</a></td>
+		</tr>
         <tr>
         <td bgcolor="white" align="center">
 	<table>
@@ -529,7 +546,9 @@ init('lnk0','lyr0')
         collection within the Reunion sites, such as registration for services.<br>
         <br>
         Note to Parents. If you have any concerns about the Reunion.com Sites or 
-        its related services, please contact us by clicking here.<br>
+        its related services, please contact us by 
+        <a href="http://help.reunion.com/selfhelp/">clicking here.</a>
+        <br>
         <br>
         <font color="#333399"><b>Information Collection and Use</b></font><br>
         Below are more details about the information the Reunion.com Sites 
@@ -731,8 +750,9 @@ init('lnk0','lyr0')
         sites in order to provide advertisements on this site and other sites 
         about goods and services that may be of interest to you. If you would 
         like more information about this practice and to know your choices about 
-        not having this information used by these companies, please click here 
-        http://www.networkadvertising.org/optout_nonppii.asp. <br>
+        not having this information used by these companies, please 
+        <a href="http://www.networkadvertising.org/optout_nonppii.asp">click here.</a> 
+        <br>
         Third Party Cookies. In the course of serving advertisements to this 
         site, our third-party advertiser may place or recognize a unique 
         “cookie” on your browser. <br>
@@ -773,7 +793,8 @@ init('lnk0','lyr0')
         </blockquote>
         <p><span class="ProfBodyBlk"><font color="#333399"><b>Still Have Questions?</b></font><br>
         If you have any other questions about the Reunion.com Privacy Policy, 
-        please contact us by clicking here or write to us at:</span></p>
+        please contact us by <a href="http://help.reunion.com/selfhelp/">clicking here</a>
+        or write to us at:</span></p>
         <p><span class="ProfBodyBlk"><b>Reunion.com, Inc.<br>
         Attn: Privacy Policy Officer</b><br>
         12100 Wilshire Blvd.<br>
@@ -781,6 +802,9 @@ init('lnk0','lyr0')
         Los Angeles, CA 90025</span><br>
         <br>
         <span class="ProfBodyBlk"><font color="#333399"><b>Effective Date: March 7, 2005</b></font><br><br></span><br><br></p></td></tr>
+		<tr>
+			<td align="right"><a class="ProfBodyBlk" href="javascript:history.go(-1)">&lt;&lt; Back</a></td>
+		</tr>
 	 
 	</tbody></table>
 
@@ -810,9 +834,35 @@ init('lnk0','lyr0')
    <tr>
     <td><table border="0">
 </table></td>
-   </tr>
-
- <!--- ***Footer*** --->	
+   </tr><!--- ***Footer*** --->	
+	<tr>
+		<td colspan="3"><table cellpadding="0" cellspacing="0" border="0" width="100%" align="center">
+<tbody><tr>
+	<td><img src="http://www.reunion.com/images/t.gif" width="1" height="25" border="0" alt=""></td>
+</tr>
+<tr bgcolor="#f8f8f8">
+	<td align="center" style="font-family: tahoma, arial, sans serif; font-size: 9px; padding-top: 2px; padding-bottom:2px; color: #999;">ADVERTISEMENT</td>
+</tr>
+<tr bgcolor="#f5f5f5">
+	<td align="center" style="padding-bottom: 15px;"><!--BEGIN Reunion.COM http://728ReunionBottom.com (728x90)-->
+<script language="JavaScript">
+<!--
+var random = Math.floor(Math.random() * 1000000000), cdate = new Date();
+document.write('<iframe src="http://ad.reunion.com/code?pid=130405&gid=30&oin=1&rto=0&srb=&rid=' + random + '&dom=' + cdate.getDate() + '&dow=' + cdate.getDay() + '&hod=' + cdate.getHours() + '" frameborder="0" vspace="0" hspace="0" width="728" height="90" marginwidth="0" marginheight="0" scrolling="no">');
+document.write('<a href="http://ad.reunion.com/default_reference?pid=130405&gid=30" target="_blank"><img src="http://ad.reunion.com/default_image?pid=130405&gid=30" border="0"></a>');
+document.write('</iframe>');
+// -->
+</script><iframe src="http://ad.reunion.com/code?pid=130405&amp;gid=30&amp;oin=1&amp;rto=0&amp;srb=&amp;rid=861657603&amp;dom=30&amp;dow=4&amp;hod=16" frameborder="0" vspace="0" hspace="0" width="728" height="90" marginwidth="0" marginheight="0" scrolling="no"><a href="http://ad.reunion.com/default_reference?pid=130405&gid=30" target="_blank"><img src="http://ad.reunion.com/default_image?pid=130405&gid=30" border="0"></a></iframe>
+<noscript>
+<iframe src="http://ad.reunion.com/code?pid=130405&gid=30&oin=1&rto=0" frameborder="0" vspace="0" hspace="0" width="728" height="90" marginwidth="0" marginheight="0" scrolling="no"><a href="http://ad.reunion.com/default_reference?pid=130405&gid=30" target="_blank"><img src="http://ad.reunion.com/default_image?pid=130405&gid=30" border="0"></a></iframe>
+</noscript>
+<!--END Reunion.COM --></td>
+</tr>
+<tr>
+	<td><img src="http://www.reunion.com/images/t.gif" width="1" height="4" border="0" alt=""></td>
+</tr>
+</tbody></table></td>
+	</tr>
  	<tr>
   		<td colspan="3"><img src="/images/t.gif" height="20" width="1" border="0"></td>
  	</tr>
@@ -820,7 +870,7 @@ init('lnk0','lyr0')
   		<td colspan="3" bgcolor="#efefef"><img src="/images/t.gif" height="1" width="1" border="0"></td>
  	</tr>	
 					<tr>
-      				<td colspan="3" align="center" style="font-family: verdana, arial, sans serif; color: #9c9c9c; font-size: 10px;"><br>Copyright © 2005, Reunion.com Inc<br><a class="HpNoHover" href="http://www.reunion.com/site-root/aboutus.jsp">About Us</a> | <a class="HpNoHover" href="http://www.reunion.com/site-root/advertising.jsp">Advertise With Us</a> | <a class="HpNoHover" href="http://affiliates.reunion.com/a/">Affiliates</a> | <a class="HpNoHover" href="http://www.reunion.com/site-root/useragreement.jsp">User Agreement</a> | <a class="HpNoHover" href="http://www.reunion.com/site-root/privacypolicy.jsp">Privacy Policy</a> | <a class="HpNoHover" href="http://static.reunion.com/us/index.html">US Schools</a> | <a class="HpNoHover" href="http://static.reunion.com/canada/index.html">Canada Schools</a> | <a class="HpNoHover" href="http://peoplesearch.reunion.com">People Search</a> | <a class="HpNoHover" href="http://help.reunion.com/selfhelp/">Help</a><br><br></td>
+      				<td colspan="3" align="center" style="font-family: verdana, arial, sans serif; color: #9c9c9c; font-size: 10px;"><br>Copyright © 2006, Reunion.com Inc<br><a class="HpNoHover" href="http://www.reunion.com/site-root/aboutus.jsp">About Us</a> | <a class="HpNoHover" href="http://www.reunion.com/site-root/advertising.jsp">Advertise With Us</a> | <a class="HpNoHover" href="http://affiliates.reunion.com/a/">Affiliates</a> | <a class="HpNoHover" href="http://www.reunion.com/site-root/useragreement.jsp">User Agreement</a> | <a class="HpNoHover" href="http://www.reunion.com/site-root/privacypolicy.jsp">Privacy Policy</a> | <a class="HpNoHover" href="http://static.reunion.com/us/index.html">US Schools</a> | <a class="HpNoHover" href="http://static.reunion.com/canada/index.html">Canada Schools</a> | <a class="HpNoHover" href="http://peoplesearch.reunion.com">People Search</a> | <a class="HpNoHover" href="http://help.reunion.com/selfhelp/">Contact&nbsp;Us</a><br><br></td>
 					
 	   			</tr> 
 	   		</tbody></table>
