--- a/t/to/top/top26.net.html
+++ b/t/to/top/top26.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the top26.net privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216163445id_/http%3A//top26.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the top26.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615020245id_/http%3A//top26.net/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Top26.net / Gaming - Privacy Policy</title>
@@ -52,8 +52,7 @@
 </tbody></table></td>
 <td width="13"><img src="/images/top26.net-search-2.jpg" width="13" height="28"></td>
 </tr>
-</tbody></table>
-<div style="margin-top: 5px; margin-bottom: 5px;" align="center"><b><a href="http://www.nearlygood.com" target="_blank">Check out NearlyGood.com for Funny Videos, Sexy Babes, Daily Fitty Pictures and Tons of Online Games!</a></b></div><table width="594" border="0" align="center" cellpadding="0" cellspacing="0">
+</tbody></table><table width="594" border="0" align="center" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td width="470" valign="top">
 <table width="470" border="0" cellspacing="0" cellpadding="0" align="center" style="margin-bottom:2px">
@@ -261,6 +260,6 @@ All question about Top 26 Gaming's privacy statement should be e-mailed to: webm
 <td class="smallfont"><div align="center">Network sites: <a href="http://www.aroms.com" target="_blank">Angel Roms</a> | <a href="http://www.nearlygood.com" target="_blank">Nearly Good</a> | <a href="http://www.angelofanime.com" target="_blank">Angel of Anime</a> | <a href="http://www.ebooksinc.com" target="_blank">Ebooks</a></div></td>
 </tr>
 </tbody></table>
-<script src="http://srs.targetpoint.com/resources/inc/tptek.js" type="text/javascript"></script>
+<br>
 
 </body></html>
