--- a/f/fo/for/foreclosure.com.html
+++ b/f/fo/for/foreclosure.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the foreclosure.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218013257id_/http%3A//www.foreclosure.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the foreclosure.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615020747id_/http%3A//www.foreclosure.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>
@@ -8,7 +8,10 @@ Privacy Policy and Security Statement
 <style><!--
 //-->
 </style>
-<link rel="stylesheet" href="/css/style.css" type="text/css"><script language="JavaScript">
+<link rel="stylesheet" type="text/css" href="/css/style.css" media="all">
+<link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
+<!--<link rel="stylesheet" type="text/css" href="/css/printstyle.css" media="print" />-->
+<script language="JavaScript">
 <!--
 var doAlerts=true;
 function changeSheets(whichSheet){
@@ -34,81 +37,148 @@ document.styleSheets[i].disabled=false;
 <div class="boxwrap">
 <div class="topbar"></div>
 <div class="boxheader">
-<div class="boxheaderleft"><a href="/"><img src="/images/xhelix/foreclosure_logo.gif" border="0"></a></div>
+<div class="boxheaderleft"><a href="/"><img src="/images/xhelix/foreclosure_logo.gif" border="0" width="169" height="27"></a></div>
 <div class="boxheadercenter">
 <a href="/login.html">Login</a> | <a href="/registration.html">Free Trial</a>
 </div>
 <div class="boxheaderclear"> </div>
 </div><div class="boxbody">
 <div class="breadcrumb"><a href="/">Home</a> &gt;&gt; Privacy Policy</div>
-<table id="gut">
-	<tbody><tr><td><h1>Privacy Policy and Security Statement</h1></td></tr>
-	<tr>
-		<td>
-		<p><b>www.foreclosure.com</b> is dedicated to safeguarding your privacy online. The following explains how your information will be treated as you make use of our products and services.</p>
-		<p><strong>Your Information</strong> <br>
-		<b>www.foreclosure.com</b> draws a distinction between information that is provided when registering on the site and information that is provided when listing your property for sale on our Web site. </p>
-		<p><strong>Personal Information</strong> <br>
-		Personal information is defined as any information entered when registering or using services obtained through our Web site or any other information collected about you on our Web site (such as how long you spend on the web site, what you look at on the web site, etc.) We at <b>www.foreclosure.com</b> are constantly striving to provide useful products and services based on the content of our site and on related subjects of interest. We may sell or distribute certain individual personal information to other companies, including related interests or vendors so as to provide you with important offers. Notwithstanding the same, if the box on our registration screen is checked asking to receive advertising offers from us and our partners, then your personal information (e.g. registration data, email address and any other data collected from you on our site) may also be shared with or sold to third parties. We may also use or provide partners with aggregate information from the information provided by all users. If you linked to this page (or subscription form) from another web site, information entered here may be disclosed to the owners of such web site and to other third parties. </p>
-		<p><strong>Cookies</strong> <br>
-		In order to enhance your visit with personalized services, <b>www.foreclosure.com</b> makes use of cookie technology. A cookie is a small file that is assigned to a user when they register on a Web site. These cookies do not collect personally identifiable information, nor are they shared with our partners and vendors. We use cookie technology to track the way in which customers use the site so that we can provide them with content that caters to their needs. We also use cookies to make your visit more convenient by saving your password so that you do not have to re-enter it each time you visit our site. </p>		
-		<p><strong>IP Address</strong> <br>
-		IP addresses are unique to each computer, and they are used to identify senders and receivers of information over the Internet. <b>www.foreclosure.com</b> uses your computer's IP address to administer our Web site and to report aggregate information to our advertisers. </p>
-		<p><strong>Contests and Surveys</strong> <br>
-		<b>www.foreclosure.com</b> occasionally asks users to complete surveys that we use for research purposes. This information is only shared with advertisers on an aggregate basis unless you otherwise consent. Individual user information is not released without your consent. </p>
-		<p><strong>A Word About Security</strong> <br>
-		At <b>www.foreclosure.com</b>, we are committed to maintaining a secure environment to store and receive your personal information. </p>		
-		<p>All of the information transmitted to <b>www.foreclosure.com</b> is stored safely and securely behind our firewall. A firewall is a buffer that isolates our network from the Internet. </p>
-		<p>At <b>www.foreclosure.com</b>, we constantly monitor our Web security in order to protect your information. Once your information is received at <b>www.foreclosure.com</b>, access to your information is limited. Each employee is provided with a copy of this document so that they are aware of our privacy practices. </p>
-		<p><b>www.foreclosure.com</b> works closely with our partners to ensure your privacy, however we are not responsible for the privacy policy or content of our partners' Web sites. </p>
-		<p><b>www.foreclosure.com</b> will not disclose any of your personal information, except when we have your permission or when we believe in good faith that the law requires it. </p>
-		<p><strong>Changing and Editing Your Information</strong> <br>
-		You, as a user, can change or edit your personal information at any time. This procedure is accomplished by choosing to edit your profile account information once logged in on our Web site. If you have any difficulties with, or questions about the modification of personal information, please contact <a href="mailto:support@foreclosure.com">support@foreclosure.com</a> </p>
-		
-		<p><strong>Conclusion</strong> <br>
-		Thank you for taking the time to educate yourself about the ways in which <b>www.foreclosure.com</b> collects, uses, and stores the information that you provide. We recommend that you also read our <a href="/terms.html">Terms and Conditions of Service and Use</a> since it provides more information about <b>www.foreclosure.com</b> policies. If you have any questions about our privacy policy and security statement, please email <a href="mailto:support@foreclosure.com">support@foreclosure.com</a>. Please revisit this site on occasion to make sure that you have viewed the most recent version of the privacy policy and security statement. <b>www.foreclosure.com</b> reserves the right to change any of the information listed on this document and will notify users of any changes by posting the new version of this document to the site at the Privacy Policy &amp; Security Statement link. </p>
-		</td>
+<table>
+	<tbody><tr>
+	<td colspan="2"><h1 style="font-size: 16px; margin-bottom: 15px;">Privacy Policy and Security Statement</h1></td>
 	</tr>
+	<tr>
+		<td width="200" height="80" valign="top" class="press_articles_nav">
+		<div class="alertstate_banner lawsproc">
+			<p><a href="/alert.html">FREE Foreclosure<br>Email Alerts</a></p>
+			</div>
+			<div>
+			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="155" height="180">
+		  <param name="movie" value="/css/img/banner_alerts.swf">
+		  <param name="quality" value="high">
+		  <embed src="/css/img/banner_alerts.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="155" height="180">
+		</object>
+			</div>
+		</td>
+	    <td rowspan="2">
+         			<table width="500" border="0" align="center" cellspacing="3" class="sitemap">
+  				<tbody><tr> 
+				  <td>
+				 	<p><b>www.foreclosure.com</b> is dedicated to safeguarding your privacy online. The following explains how your information will be treated as you make use of our products and services.</p>
+		<br><br>
+		
+		<h1>Your Information</h1>
+		<p><b>www.foreclosure.com</b> draws a distinction between information that is provided when registering on the site and information that is provided when listing your property for 
+			sale on our Web site.
+		</p>
+		<br><br>
+		
+		<h1>Personal Information</h1>
+		<p>Personal information is defined as any information entered when registering or using services obtained through our Web site or any other information collected about you 
+		on our Web site (such as how long you spend on the web site, what you look at on the web site, etc.) We at <b>www.foreclosure.com</b> are constantly striving to provide useful
+		products and services based on the content of our site and on related subjects of interest. We may sell or distribute certain individual personal information to other 
+		companies, including related interests or vendors so as to provide you with important offers. We may also use or provide partners with aggregate information from the information provided by all users. 
+		If you linked to this page (or subscription form) from another web site, information entered here may be disclosed to the owners of such web site and to other third parties. 
+		</p>
+		<br><br>
+		
+		<h1>Cookies</h1>
+		<p>In order to enhance your visit with personalized services, <b>www.foreclosure.com</b> makes use of cookie technology. A cookie is a small file that is assigned to a user when
+		they register on a Web site. These cookies do not collect personally identifiable information, nor are they shared with our partners and vendors. We use cookie technology to 
+		track the way in which customers use the site so that we can provide them with content that caters to their needs. We also use cookies to make your visit more convenient by
+		saving your password so that you do not have to re-enter it each time you visit our site.
+		</p>
+		<br><br>
+				
+		<h1>IP Address</h1>
+		<p>IP addresses are unique to each computer, and they are used to identify senders and receivers of information over the Internet. <b>www.foreclosure.com</b> uses your computer's 
+		IP address to administer our Web site and to report aggregate information to our advertisers.
+		</p>
+		<br><br>
+		
+		<h1>Contests and Surveys</h1>
+		<p><b>www.foreclosure.com</b> occasionally asks users to complete surveys that we use for research purposes. This information is only shared with advertisers on an aggregate 
+		basis unless you otherwise consent. Individual user information is not released without your consent.
+		</p>
+		<br><br>
+		
+		<h1>A Word About Security</h1>
+		<p>At <b>www.foreclosure.com</b>, we are committed to maintaining a secure environment to store and receive your personal information.
+		</p>
+				
+		<p>All of the information transmitted to <b>www.foreclosure.com</b> is stored safely and securely behind our firewall. A firewall is a buffer that isolates our network from the 
+		Internet. 
+		</p>
+		
+		<p>At <b>www.foreclosure.com</b>, we constantly monitor our Web security in order to protect your information. Once your information is received at <b>www.foreclosure.com</b>, access to
+		your information is limited. Each employee is provided with a copy of this document so that they are aware of our privacy practices. 
+		</p>
+		
+		<p><b>www.foreclosure.com</b> works closely with our partners to ensure your privacy, however we are not responsible for the privacy policy or content of our partners' Web sites. 
+		</p>
+		
+		<p><b>www.foreclosure.com</b> will not disclose any of your personal information, except when we have your permission or when we believe in good faith that the law requires it. 
+		</p>
+		<br><br>
+		
+		<h1>Changing and Editing Your Information</h1>
+		<p>You, as a user, can change or edit your personal information at any time. This procedure is accomplished by choosing to edit your profile account information once logged 
+		in on our Web site. If you have any difficulties with, or questions about the modification of personal information, please contact <a href="mailto:support@foreclosure.com">
+		support@foreclosure.com</a>
+		</p>
+		<br><br>
+		
+		<h1>Conclusion</h1>
+		<p>Thank you for taking the time to educate yourself about the ways in which <b>www.foreclosure.com</b> collects, uses, and stores the information that you provide. We recommend 
+		that you also read our <a href="/terms.html">Terms and Conditions of Service and Use</a> since it provides more information about <b>www.foreclosure.com</b> policies. 
+		If you have any questions about our privacy policy and security statement, please email <a href="mailto:support@foreclosure.com">support@foreclosure.com
+		</a>. Please revisit this site on occasion to make sure that you have viewed the most recent version of the privacy policy and security statement. <b>www.foreclosure.com</b> 
+		reserves the right to change any of the information listed on this document and will notify users of any changes by posting the new version of this document to the site at 
+		the Privacy Policy &amp; Security Statement link. 
+		</p>
+		<img src="/css/img/arrowup.gif"><a href="#">top</a>
+		</td>
+		</tr>						
+	</tbody></table>
+			
+	</td>
+	</tr>
+	<tr>
+	  <td class="press_articles_nav">&nbsp;</td>
+	  </tr>
 </tbody></table>
-</div>
-<div id="promotions">
-<script type="text/javascript"><!--
-google_ad_client = "pub-4034915303871713";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_channel ="5975156138";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_url = "008000";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
 </div>
 <div class="boxfooter">
 <a href="/">Home</a> |
 <a href="/login.html">Login</a> |
-<a href="/contact.html">Contact</a> |
-<a href="/about.html">About</a> |
+<a href="/contact.html">Contact Us</a> |
+<a href="/about.html">About Us</a> |
 <a href="/links.html">Links</a> |
 <a href="/lostaccess.html">Lost Access</a> |
 <a href="/press.html">In the News</a> |
-<a href="/articles.html">Articles</a> |
+<a href="/article.html">Articles</a> |
 <a href="/alert/index.html">Email Alerts</a> |
 <a href="http://affiliate.foreclosure.com">Affiliate Program</a> |
 <a href="/testimonials.html">Testimonials</a> |
-<a href="/sitemap.html">Site map</a>
+<a href="/sitemap.html">Site Map</a>
 <br>
 <br>
 <a href="/questions.html">FAQs</a> |
+<a href="/edocs.html">e-Documents</a> |
 <a href="/registration.html">Registration</a> |
 <a href="/privacy.html">Privacy Policy &amp; Security Statement</a> |
-<a href="/terms.html">Terms and Conditions of Service</a><br>
-© Foreclosure.com. 1999-2005. All Rights Reserved.
+<a href="/terms.html">Terms and Conditions of Service</a> |
+<a href="/careers.html">Careers</a> |
+<a href="/stopform.html">Stop Foreclosure</a><br><br>
+© Foreclosure.com / ForeclosureFreeSearch, Inc. 1999-2006. All Rights Reserved.
 </div>
 </div>
 </div>
+<script language="javascript" src="http://server.iad.liveperson.net/hc/70695643/x.js?cmd=file&amp;file=chatScript3&amp;site=70695643&amp;&amp;imageUrl=http://www.foreclosure.com/css/img"> </script>
 
+<script language="javascript">
+var lpPosY = 300;
+var lpPosX = 300;
+</script>
 </body></html>
