--- a/g/gl/glo/globalgraphics.com.html
+++ b/g/gl/glo/globalgraphics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globalgraphics.com privacy policy that was archived on 2005-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051222143551id_/http%3A//www.globalgraphics.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalgraphics.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615020836id_/http%3A//globalgraphics.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 		<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
