miamiandbeaches.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;education",
  "char_count": 9908,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.97,
  "homepage_snapshot_redirected_domain": "gmcvb.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060409231031id_/http://www.gmcvb.com/Index.asp",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402202001id_/http%3A//miamiandbeaches.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "gmcvb.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615020856id_/http%3A//www.gmcvb.com/privacy_policy.asp",
  "policy_title": "privacy policy",
  "policy_url": "gmcvb.com/privacy_policy.asp",
  "sha1": "fdc20f4e4a928adf81a6687793865c179c97882d",
  "simhash": 5645665314002151478,
  "simhash_updated": true,
  "site_hostname": "miamiandbeaches.com",
  "site_url": "http://miamiandbeaches.com",
  "smog": 14.98,
  "strict_updated": true,
  "timestamp": "20060615020856",
  "word_count": 1557,
  "year": 2006
}

--- a/m/mi/mia/miamiandbeaches.com.html
+++ b/m/mi/mia/miamiandbeaches.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the miamiandbeaches.com privacy policy that was archived on 2005-03-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050307213201id_/http%3A//www.gmcvb.com/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the miamiandbeaches.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615020856id_/http%3A//www.gmcvb.com/privacy_policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -88,6 +88,9 @@ function printWindow(){
         <p><br>
     XII. Modification of Terms and Conditions</p>
         <p>GMCVB reserves the right, at its sole discretion, to change, modify, add or remove any portion of this Agreement, in whole or in part, at any time. Notification of changes in the Agreement will be posted on the website. GMCVB may change, suspend or discontinue any aspect of the website at any time, including the availability of any website feature, database, or content. GMCVB may also impose limits on certain features and services or restrict your access to parts or all of the website without notice or liability. By using this website you agree to be bound by any such revisions and should therefore periodically visit the page to determine the then current terms of use to which you are bound.</p>
+        <p> XII. Electronic Newsletters <br>
+          <br>
+We offer free, electronic newsletters, updates and e-mail reminders as a service to our registrants, based upon your voluntary subscription. You will only receive an electronic newsletter if you have requested it (opted-in). We do not share our mailing lists with any third parties, including advertisers or partners. </p>
       </div>
       <!-- Listing --></td>
   </tr>
