--- a/n/no/not/notebookreview.com.html
+++ b/n/no/not/notebookreview.com.html
@@ -1,58 +1,20 @@
-<!--The following is the downloaded HTML source of the notebookreview.com privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211092831id_/http%3A//www.notebookreview.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the notebookreview.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615020955id_/http%3A//www.notebookreview.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
-	<title>Notebook and Laptop Reviews</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<meta name="description" content="Notebook and Laptop Reviews">
-	<meta name="keywords" content="laptop,notebook,Acer,Arm,Asus,Ashton Digital,Alienware,Apple,Chembook,Compaq,DELL,Fosa,Fujitsu,Gateway,Hitachi,KDS,IBM,Micron,NEC,Panasonic,PCNotebook,Pionex,Sager, Sotec,Sceptre,Sharp,Sony,Toshiba,Twinhead,Umax,Winbook,reviews, links,information,news,batteries, buying,pcmcia">
-	<link rel="stylesheet" href="/style_notebookreview.css" type="text/css" media="screen">
-	<link rel="stylesheet" href="/columns_notebookreview.css" type="text/css" media="screen">
-	<link rel="alternate" type="application/rss+xml" title="NotebookReview.com News Feed" href="http://www.notebookreview.com/rss.xml">
-	<script src="/code.js"></script>
-</head>
-
-<body>
-
-<!-- Site Tabs -->
-<div id="sitetabContainer">
-	<a href="http://www.technologyguide.com">TechnologyGuide.com</a><a href="http://www.digitalcamerareview.com">Digital Camera Reviews</a><a href="http://www.notebookreview.com" class="on">Notebook Reviews</a><a href="http://www.bargainpda.com">PDA Reviews</a><a href="http://www.spotstop.com">Smart Watch Reviews</a><a href="http://www.tabletpcreviewspot.com">Tablet PC Reviews</a>
-</div>
-<!-- End Site Tabs -->
-
-<!-- Logo Header and Search -->
-<div id="headerBG">
-	<div id="header">
-		<div id="searchBox">
-			<form method="post" action="/price/default.asp" name="search" id="Form1">
-				<input name="hdnSearch" value="search" id="Hidden1" type="hidden">
-				<input name="searchText" size="18" value="" type="text" class="keywordField">
-				<input value="SEARCH" name="btnAction" class="btn" type="submit">
-			</form>
-		</div>
-		<div><a href="/"><img src="/images/logo_notebookreview.jpg" alt="Notebook Review Logo" title="Welcome to NotebookReview.com!" border="0"></a></div>
-	</div>
-</div>
-<!-- EndLogo Header and Search -->
-<!-- Top Banner -->
-<div id="topBanner">
-	ADVERTISEMENT
-	<div>
-	<center><iframe width="728" height="90" marginwidth="0" marginheight="0" frameborder="0" scrolling="no" src="/banner.html"></iframe></center>
-	</div>
-</div>
-<!-- End Top Banner -->
-
-<!-- Main Navigation -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><title>Notebook and Laptop Reviews</title><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta name="description" content="Notebook" and="" laptop="" reviews"=""><meta name="keywords" content="laptop,notebook,Acer,Asus,Ashton Digital,Alienware,Apple,Chembook,Compaq,DELL,Fosa,Fujitsu,Gateway,Hitachi,KDS,Lenovo,IBM,Micron,NEC,Packard Bell,Panasonic,Sager, Sotec,Sceptre,Sharp,Sony,Toshiba,Twinhead,Umax,Voodoo PC,Winbook,nVidia,ATI,reviews"><link rel="stylesheet" href="/style.css" type="text/css" media="screen"><link rel="alternate" type="application/rss+xml" title="NotebookReview.com News Feed" href="/rss.xml"><script src="/code.js"></script><script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslmain.js"></script><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"></head><body><div id="sitetabContainer"><a href="http://www.digitalcamerareview.com" class="">Digital Camera Reviews</a><a href="http://www.notebookreview.com" class="on">Notebook Reviews</a><a href="http://www.Brighthand.com" class="">PDA Reviews</a><a href="http://www.spotstop.com" class="">Smart Watch Reviews</a><a href="http://www.tabletpcreviewspot.com" class="">Tablet PC Reviews</a></div><!-- Logo Header and Search --><div id="headerBG"><div id="header"><div id="searchBox"><form method="get" action="http://www.google.com/custom" target="_top"><input type="text" name="q" size="31" maxlength="255" value="" style="width:195px;"><input type="hidden" name="sa" value="Google Search"><input type="hidden" name="domains" value="NotebookReview.com"><input type="hidden" name="client" value="pub-5771476875610059"><input type="hidden" name="sitesearch" value="NotebookReview.com"><input type="hidden" name="forid" value="1"><input type="hidden" name="ie" value="ISO-8859-1"><input type="hidden" name="oe" value="ISO-8859-1"><input type="hidden" name="flav" value="0000"><input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:02538B;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;LH:27;LW:150;L:http://www.NotebookReview.com/images/notebookreview_small.jpg;S:http://www.NotebookReview.com;FORID:1;"><input type="hidden" name="hl" value="en"> <input type="submit" value="SEARCH" name="btnAction" class="btn"></form></div><div><a href="/"><img src="/images/logo_notebookreview.jpg" alt="Notebook and Laptop Reviews" title="Welcome to NotebookReview.com" border="0" height="50" width="260"></a></div></div></div><div id="topBanner"><div><center>
+<script language="javascript" type="text/javascript">Ads_kid=0;Ads_bid=0;Ads_xl=728;Ads_yl=90;Ads_wrd='[KeyWord]';</script><script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/cjf/00/13/67/41.js"></script>
+</center></div></div><!-- Main Navigation -->
 <div id="mainNavBG">
+<table align="center" cellpadding="0" cellspacing="0" border="0"><tbody><tr><td>
 <div id="mainNav">
-<a href="/" class="on">HOME</a><a href="/price/">Notebook Database</a><a href="/reviews/">Notebook Reviews</a><a href="http://forum.notebookreview.com">Notebook Forums</a><a href="/dellCoupon.asp">Dell Coupons</a><a href="/clearance/">Clearance</a>
-</div>
+<a href="/" class="on">HOME</a><a href="/price/">Notebook Database</a><a href="/reviews/">Notebook Reviews</a><a href="http://forum.notebookreview.com">Notebook Forums</a><a href="/dellCoupon.asp">Dell Coupons</a><a href="/deals/">$ Laptop Deals</a><a href="/ubid/"><font color="red">u</font><font color="navy">Bid<font color="red">.</font><font color="navy">com Deals</font></font></a><font color="navy">
+</font></div><font color="navy">
+</font></td></tr></tbody></table>
 </div>
 <!-- End Main Navigation -->
 <!-- Main Body Content -->
 <div id="bodyWrapper">
-	
+
 <!-- Center Column -->
 <div id="centerColNosides">
 	<div id="contentFunctions">
@@ -112,30 +74,26 @@ the use and satisfaction of this site.
 	</div>
 	<!-- End Center Column -->
 	
-	<div class="clear"></div>
-	
+<div class="clear"></div>
 </div>
 <!-- End Main Body Content -->
 
 <!-- Footer -->
-
 <!-- Footer -->
-<div id="footer">
-	<a href="http://www.digitalcamerareview.com">Digital Camera Reviews</a>&nbsp;|
-	<a href="http://www.notebookreview.com">Notebook Reviews</a>&nbsp;|
-	<a href="http://www.bargainpda.com">PDA Reviews</a>&nbsp;|
-	<a href="http://www.spotstop.com">Smart Watch Reviews</a>&nbsp;|
-	<a href="http://www.tabletpcreviewspot.com">Tablet PC Reviews</a><br><br>
-	<a href="/advertise/">Advertising</a>&nbsp;|
-	<a href="/sitemap/">NotebookReview.com Sitemap</a>&nbsp;|
-	<a href="/contact/">Contact Us</a>&nbsp;|
-	<a href="/submitReview/">Submit Review</a>&nbsp;|
-	<a href="/privacy/">Privacy Policy</a>
-	<br><br>
-	© NotebookReview.com 2005
-</div>
+<div id="footer"><a href="http://www.digitalcamerareview.com">Digital Camera Reviews</a> | <a href="http://www.notebookreview.com">Notebook Reviews</a> | <a href="http://www.brighthand.com">PDA Reviews</a> | <a href="http://www.spotstop.com">Smart Watch Reviews</a> | <a href="http://www.tabletpcreviewspot.com">Tablet PC Reviews</a><br><br>
+<a href="/advertise/">Advertising</a> | <a href="/sitemap/">NotebookReview.com Sitemap</a> | <a href="/contact/">Contact Us</a> | <a href="/submitReview/">Submit Review</a> | <a href="/privacy/">Privacy Policy</a>
 
+<br><br>© NotebookReview.com 2006</div>
 
+<!-- google analytics -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-283204-1";
+_udn="notebookreview.com";
+urchinTracker();
+</script>
+<!-- end google analytics -->
 <!-- End Footer -->
 <!-- End Footer -->
 
