--- a/b/bu/bui/buildtraffic.com.html
+++ b/b/bu/bui/buildtraffic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the buildtraffic.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223032549id_/http%3A//www.buildtraffic.com/privacy_policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the buildtraffic.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021053id_/http%3A//buildtraffic.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -14,6 +14,18 @@
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<!-- Start BT Tracking and Reporting -->
+
+<script type="text/javascript">
+var nsAmp=unescape('%26');
+var nsSiteId=1;
+var nsTrackPath='https://www.buildtraffic.com/tracker/index.php?sc=track'+nsAmp+'action=default'+nsAmp+'';
+var nsTrackMode='default';
+var nsCode=1;
+</script>
+<script type="text/javascript" src="https://www.buildtraffic.com/tracker/track.js"></script>
+
+<!-- End BT Tracking and Reporting -->
 <table width="779" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
