mcdonalds.com.sg (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;foodandrecipes",
  "char_count": 7719,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.8,
  "homepage_snapshot_redirected_domain": "mcdonalds.com.sg",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060313072729id_/http://www.mcdonalds.com.sg/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060313072729id_/http%3A//mcdonalds.com.sg",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mcdonalds.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615021449id_/http%3A//mcdonalds.com/privacy.html",
  "policy_title": "Privacy Policy",
  "policy_url": "mcdonalds.com/privacy.html",
  "sha1": "88bd51f21065f6af39cb531483aaa25b95ff2da1",
  "simhash": 11063367365478690590,
  "simhash_updated": true,
  "site_hostname": "mcdonalds.com.sg",
  "site_url": "http://mcdonalds.com.sg",
  "smog": 15.25,
  "strict_updated": true,
  "timestamp": "20060615021449",
  "word_count": 1297,
  "year": 2006
}

--- a/m/mc/mcd/mcdonalds.com.sg.html
+++ b/m/mc/mcd/mcdonalds.com.sg.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mcdonalds.com.sg privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230075822id_/http%3A//mcdonalds.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mcdonalds.com.sg privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021449id_/http%3A//mcdonalds.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
    	
@@ -14,7 +14,7 @@
 
 
 
-<!--Server Location: West-->
+<!--Server Location: East-->
 
 
 <!-- global css that all sites used -->
@@ -212,7 +212,7 @@
    <tr> 
      <td>
         <table class="leftNav" width="121" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr><td id="leftsel" height="20" width="121" valign="middle" class="leftnav1On" colspan="5"><a href="/privacy.html">Privacy Policy</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav2" colspan="5"><a href="/privacy/opt.html">Info Request Form</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav2" colspan="5"><a href="/privacy/opt_child.html">Info Request Form (Child)</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav2" colspan="5"><a href="/privacy/spa.html">Política de Privacidad </a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav1" colspan="5"><a href="/es.html">es</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav1" colspan="5"><a href="/archcard.html">archcard</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr>
+<tbody><tr><td id="leftsel" height="20" width="121" valign="middle" class="leftnav1On" colspan="5"><a href="/privacy.html">Privacy Policy</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav2" colspan="5"><a href="/privacy/opt.html">Info Request Form</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav2" colspan="5"><a href="/privacy/opt_child.html">Info Request Form (Child)</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav2" colspan="5"><a href="/privacy/spa.html">Política de Privacidad </a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav1" colspan="5"><a href="/es.html">es</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav1" colspan="5"><a href="/archcard.html">archcard</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td id="" height="20" width="121" valign="middle" class="leftnav1" colspan="5"><a href="/global_pr.html">Global Press Release</a></td></tr><tr><td class="leftnavRowStart" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr><tr><td class="leftnavRowEnd" colspan="5"><img src="/0.gif" alt="spacer0" width="121" height="1"></td></tr>
         </tbody></table>
       </td>
    </tr>
@@ -592,7 +592,7 @@
 <!--BEGIN New Row TABLE-->
 
 
-
+    
 
 </td>
 
@@ -648,11 +648,12 @@
 
 <a href="/corp.html" class="footer">Corporate McDonald's</a> | 
 <a href="/countries.html" class="footer">Country/Market Sites</a> |
+<a href="/corp/podcasts.html" class="footer_large">Podcasts</a> | 
 <a href="/usa/voice.html" class="footer_large">Voice</a> | 
 
  
 
- ©2004-2005 McDonald's.  | 
+ ©2005-2006 McDonald's.  | 
 <a href="/terms.html" class="footer">Terms &amp; Conditions</a> | <a href="/subscribe/index.html" class="footer">Subscribe</a><a>/</a><a href="/unsubscribe/index.html" class="footer">Unsubscribe</a>
 <br><br>
 <span class="footer_color"><a href="/privacy.html" class="footer_color">Privacy Policy</a><span></span></span></span></p>
