--- a/p/pe/pep/pepperjam.com.html
+++ b/p/pe/pep/pepperjam.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pepperjam.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231053150id_/http%3A//pepperjam.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pepperjam.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021527id_/http%3A//www.pepperjam.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
