--- a/r/ru/rug/rugby.com.au.html
+++ b/r/ru/rug/rugby.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rugby.com.au privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211105701id_/http%3A//rugby.com.au/home/footer/privacy%2C47.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rugby.com.au privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021534id_/http%3A//rugby.com.au/home/footer/privacy%2C47.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 	<title>rugby.com.au | Privacy</title>	
@@ -9,14 +9,14 @@
 	<!--[if lt IE 6]><link rel="STYLESHEET" type="text/css" href="/aru/css/ie55.css" /><![endif]-->
 	<script src="/aru/includes/scripts.js" type="text/javascript"></script>
 	
-<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}Meta.xsl_rugby (Source: Generated live) -->
+<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}Meta.xsl_rugby  (Source: aspcache-memory cache.  Generated at 6/14/2006 11:08:36 PM, will expire at 6/15/2006 12:39:36 PM, hit 9 times) -->
 
 <meta name="category" content="(ARU) Everything">
 <meta name="category" content="(ARU) rugby.com.au">
 <meta name="DC.Title" content="Privacy">
 <meta name="description" content="The Australian Rugby Union Limited ( ARU ) respects the privacy of the individuals on whom the ARU collects, uses, discloses and holds personal information. The ARU has a Privacy Policy that is based on the National Privacy Policy Principles contained in the Privacy Act 1988 (Cth). The ARU uses the ">
 
-<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}Meta.xsl_rugby (Processing time: 0.3392 seconds) -->
+<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}Meta.xsl_rugby (Processing time: 0 seconds) -->
 
 
 </head>
@@ -29,7 +29,7 @@
 	
 <!-- using verve_cachepublishtimeout_home - 1 -->
 
-<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}GlobalNav.xsl_rugby (Source: Generated live) -->
+<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}GlobalNav.xsl_rugby  (Source: aspcache-memory cache.  Generated at 6/14/2006 10:18:07 PM, will expire at 6/15/2006 12:15:59 PM, hit 10 times) -->
 
 <script type="text/javascript">
 	function LoadUp(){
@@ -91,22 +91,22 @@
 </tbody></table>
 </div>
 <div id="subSites">
-<a href="http://www.wallabyshop.com/affiliate.asp?afid=4&amp;c=-1&amp;cu=36" target="_blank">
+<a href="http://www.wallabyshop.com.au" target="_blank">
 <img src="/aru/images/Nav_Merchandising.gif" width="86" height="17" alt="Merchandise" border="0"></a>
+<a href="/community_rugby/tryrugby/tryrugby_landing,30128.html" target="_self">
+<img src="/aru/images/Nav_TryRugby.gif" width="71" height="17" alt="TryRugby" border="0"></a>
 <a href="/edrugby/welcome_to_edrugby/edrugby_home_page,1396.html">
-<img src="/aru/images/Nav_EdRugby.gif" width="67" height="17" alt="Ed Rugby" border="0"></a>
-<a href="/community_rugby/telstra_tryrugby/telstra_tryrugby_landing,30128.html" target="_self">
-<img src="/aru/images/Nav_TryRugby.gif" width="113" height="17" alt="Telstra TryRugby" border="0"></a>
+<img src="/aru/images/Nav_EdRugby.gif" width="67" height="17" alt="EdRugby" border="0"></a>
 </div>
 </div>
 <div id="RugbyComAuheaderShadow"></div>
 
-<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}GlobalNav.xsl_rugby (Processing time: 0.224 seconds) -->
+<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}GlobalNav.xsl_rugby (Processing time: 0.016 seconds) -->
 
 
-<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}LeftNav.xsl_rugby (Source: Generated live) -->
+<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}LeftNav.xsl_rugby  (Source: aspcache-memory cache.  Generated at 6/14/2006 10:18:07 PM, will expire at 6/15/2006 12:16:20 PM, hit 10 times) -->
 
-<div id="leftColumn"><div class="padLayer">
+<div id="leftColumn"><div class="padLayer" style="padding-bottom:0 !important;">
 <dl id="menu">
 <dt class="menuOff" onmouseover="this.className='menuOver'" onmouseout="this.className='menuOff'">
 <a href="/home/home/home_page,1025.html">Home</a></dt>
@@ -118,11 +118,11 @@
 		$assetParent=10478-->
 </div></div>
 
-<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}LeftNav.xsl_rugby (Processing time: 0.2752 seconds) -->
+<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}LeftNav.xsl_rugby (Processing time: 0 seconds) -->
 
 
 	</noindex>
-<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}MainContent.xsl_rugby (Source: Generated live) -->
+<!-- Begin VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}MainContent.xsl_rugby  (Source: aspcache-memory cache.  Generated at 6/14/2006 11:08:36 PM, will expire at 6/15/2006 12:15:53 PM, hit 9 times) -->
 
 <!--
 	$topGroup=9618
@@ -130,7 +130,7 @@
 <div id="RugbyComAu">
 <div id="ContentWrapper">
 <div id="mainContentNoRight"><div class="padLayer"><h1>Privacy</h1><p style="BACKGROUND: white; MARGIN: 6pt 0cm; LINE-HEIGHT: normal">The Australian Rugby Union Limited (<b style="mso-bidi-font-weight: normal"><i style="mso-bidi-font-style: normal">ARU</i></b>) respects the privacy of the individuals on whom the ARU collects, uses, discloses and holds personal information. The ARU has a Privacy Policy that is based on the National Privacy Policy Principles contained in the <i style="mso-bidi-font-style: normal">Privacy Act 1988</i> (Cth).</p>
-<p style="BACKGROUND: white; MARGIN: 6pt 0cm; LINE-HEIGHT: normal">The ARU uses the information it collects to administer the game of Rugby Union in Australia, to provide rugby activities and rugby-related services, to register, select and insure participants, and to asses the level of interest in the sport. </p>
+<p style="BACKGROUND: white; MARGIN: 6pt 0cm; LINE-HEIGHT: normal">The ARU uses the information it collects to administer the game of Rugby Union in Australia, to provide rugby activities and rugby-related services, to register, select and insure participants, and to assess the level of interest in the sport. </p>
 <p style="BACKGROUND: white; MARGIN: 6pt 0cm; LINE-HEIGHT: normal">The ARU also uses your information to provide information, materials and promotions relating to the ARU and to Rugby Union which the ARU considers may interest you. Where you consent, we may also disclose that information to our affiliates (to enable them to provide rugby activities and rugby related services, and administer the sport in their area) and to our sponsors (to enable them to provide information, materials and promotional opportunities). </p>
 <p style="BACKGROUND: white; MARGIN: 6pt 0cm; LINE-HEIGHT: normal"><a class="" href="/verve/_resources/ARU_Privacy_Policy_(v2).pdf" target="_blank">Click here</a>&nbsp;for a copy of our full Privacy Policy (PDF document 106kb).</p>
 <p style="BACKGROUND: white; MARGIN: 6pt 0cm; LINE-HEIGHT: normal">In some circumstances, you may be entitled to gain access to the information the ARU holds about you. If you wish to do so please contact the ARU in writing at the address below:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
@@ -140,11 +140,11 @@
 </div>
 </div>
 
-<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}MainContent.xsl_rugby (Processing time: 0.3648 seconds) -->
+<!-- End VerveContent: content_{fs}home{fs}footer{fs}privacy{cm}47.html_47_{fs}aru{fs}templates{fs}MainContent.xsl_rugby (Processing time: 0 seconds) -->
 
 <noindex>
 	
-<!-- Begin VerveContent: aru_footer  (Source: aspcache-memory cache.  Generated at 12/11/2005 10:00:57 AM, will expire at 12/12/2005 10:00:56 AM, hit 26682 times) -->
+<!-- Begin VerveContent: aru_footer  (Source: aspcache-memory cache.  Generated at 6/15/2006 11:29:23 AM, will expire at 6/15/2006 12:18:07 PM, hit 2752 times) -->
 
 <div class="clear"></div>
 <div id="backToTop"><a href="#top">Back to Top</a></div>
