ok-magazine.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 3596,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "standard",
  "flesch_kincaid": 7.1,
  "homepage_snapshot_redirected_domain": "ok-magazine.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060410195113id_/http://www.ok-magazine.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060410195113id_/http%3A//ok-magazine.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ok-magazine.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615021714id_/http%3A//www.ok-magazine.com/privacy.html",
  "policy_title": "OK! Magazine - First for Celebrity News",
  "policy_url": "ok-magazine.com/privacy.html",
  "sha1": "4bc2cd58f5e090f7dc1227405d0ce815fda2014d",
  "simhash": 9990831317040099301,
  "simhash_updated": false,
  "site_hostname": "ok-magazine.com",
  "site_url": "http://ok-magazine.com",
  "smog": 10.28,
  "strict_updated": false,
  "timestamp": "20060615021714",
  "word_count": 620,
  "year": 2006
}

--- a/o/ok/ok-/ok-magazine.com.html
+++ b/o/ok/ok-/ok-magazine.com.html
@@ -1,38 +1,44 @@
-<!--The following is the downloaded HTML source of the ok-magazine.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210175131id_/http%3A//www.ok-magazine.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ok-magazine.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021714id_/http%3A//www.ok-magazine.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>OK! Magazine - First for Celebrity News</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta name="keywords" content="ok, magazine, celebrities, celebrity, celeb, celebritys, news, gossip, gosip, chat, UK, US, hollywood, holywood, abroad, states, america, update, hottest, hotest, hot, latest, round up, stories, political, home, developments, party, parties, partys, events, premieres, world, national, international, juicy, juiciest, cool, glamour, glamor, glamorous, london, scene, hunks, babes, music, film, reviews, sport, football, travel, holidays, entertainment">
+<meta name="description" content="OK! magazine - the home of celebrity news. covering movies music TV celebrity weddings, babies, fashion break ups and make ups.">
+<meta name="author" content="Netro42 Ltd - www.netro42.com - 44 (0)20 7267 7002">
+<meta name="copyright" content="Northern and Shell Publications Ltd">
+<meta name="publisher" content="Netro42 Limited">
+<link rel="SHORTCUT ICON" href="favicon.ico">
 <link href="styles/ok.css" rel="stylesheet" type="text/css">
 <script language="JavaScript" type="text/JavaScript" src="scripts/ok.js"></script>
 </head>
 <body onload="MM_preloadImages('images/subscription_over.gif','images/issue_over.gif','images/contact_over.gif','images/advertise_over.gif')">
-<table width="100%" height="100%" border="0" cellspacing="0" cellpadding="0">
+<br>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
 		<td align="center">
-		<table width="760" border="0" cellspacing="0" cellpadding="0" bgcolor="#E20A16">
+		<table width="760" border="0" cellspacing="0" cellpadding="0" bgcolor="#f3dfeb">
 	<tbody><tr>
-		<td colspan="8"><img src="images/topshadow.gif" width="760" height="4"></td>
+		<td colspan="4"><img src="images/topshadow.gif" width="760" height="4"></td>
 	</tr>
 	<tr>
 		<td width="6" rowspan="5" background="images/leftshadow.gif"><img src="images/transdot.gif" width="6" height="1"></td>
-		<td width="267" rowspan="5"><img src="images/logo.gif" width="267" height="118"></td>
-		<td width="187"><img src="images/transdot.gif" width="187" height="10"></td>
-		<td width="153"><img src="images/transdot.gif" width="153" height="10"></td>
-		<td width="87"><img src="images/transdot.gif" width="87" height="10"></td>
-		<td width="8"><img src="images/transdot.gif" width="8" height="10"></td>
-		<td width="38"><img src="images/transdot.gif" width="38" height="10"></td>
+		<td width="260" rowspan="5"><img src="images/logo.gif" width="260" height="118"></td>
+		<td width="480"><img src="images/transdot.gif" width="473" height="10"></td>
 		<td width="14" rowspan="5" background="images/rightshadow.gif"><img src="images/transdot.gif" width="14" height="1"></td>
 	</tr>
 	<tr>
-		<td colspan="5"><a href="https://w1.buysub.com/servlet/OrdersGateway?cds_page_id=25088&amp;cds_mag_code=OKM&amp;cds_response_key=I508BA4"><img src="images/ok-usa-banner.gif" width="468" height="60" class="whiteborder"></a></td>
+		<td><a href="https://w1.buysub.com/servlet/OrdersGateway?cds_page_id=25088&amp;cds_mag_code=OKM&amp;cds_response_key=I508BA4"><img src="images/ok-usa-banner.gif" width="468" height="60" border="0" alt="Get Your Copy of OK! Now" title="Get Your Copy of OK! Now"></a></td>
 	</tr>
 	<tr>
-		<td colspan="5"><img src="images/transdot.gif" width="1" height="4"></td>
+		<td><img src="images/transdot.gif" width="1" height="4"></td>
 	</tr>
 	<tr>
-		<td valign="top"><a href="#" onclick="window.open('tv.html','','width=340,height=280,scrollbars=yes')" title="Site designed by Netro42"><img src="images/watch.gif" width="187" height="37" border="0"></a></td>
+		<td>
+			
+			<table cellpadding="0" cellspacing="0">
+		<tbody><tr><td valign="top"><a href="#" onclick="window.open('tv.html','','width=340,height=280,scrollbars=yes')" title="Site designed by Netro42"><img src="images/watch.gif" width="187" height="37" border="0"></a></td>
 		<td align="right">
 		<form name="the_form">
 		<select name="ok" style="width:142px;" onchange="window.open(window.document.the_form.ok.options[selectedIndex].value)">
@@ -42,17 +48,23 @@
 				<option value="http://www.ok-magazine.com">North America</option>
 				<option value="http://www.okmagazine.com.au">Australia</option>
 				<option value="http://www.ok-me.com">Middle East</option>
+				<option value="http://www.okmagazine.com.sg">Singapore</option>
 				
 			
 		</select>
 		</form>
 		</td>
+		<td><img src="images/transdot.gif" width="15" height="1"></td>
 		<td align="right"><img src="images/flags/us.gif" width="80" height="27"></td>
-		<td>&nbsp;</td>
-		<td valign="top"><a href="http://www.ok.co.uk"><img src="images/flags/uk.gif" width="36" height="18" vspace="5" class="blackborder" border="0"></a></td>
+		<td><img src="images/transdot.gif" width="5" height="1"></td>
+		<td valign="top"><a href="http://www.ok.co.uk" target="_new"><img src="images/flags/uk.gif" width="36" height="18" vspace="5" class="blackborder" border="0"></a></td>
+			</tr></tbody></table>
+		
+		</td>
 	</tr>
+	
 	<tr>
-		<td colspan="5"><img src="images/transdot.gif" width="1" height="5"></td>
+		<td><img src="images/transdot.gif" width="1" height="5"></td>
 	</tr>
 </tbody></table>
 <table width="760" border="0" cellspacing="0" cellpadding="0">
@@ -87,7 +99,7 @@
 						<td><img src="images/transdot.gif" width="429" height="9"></td>
 					</tr>
 					<tr>
-						<td valign="top" rowspan="2" width="266" bgcolor="#E2E6EF">
+						<td valign="top" rowspan="2" width="266" bgcolor="#f3dfeb">
 	
 	
 		
@@ -95,7 +107,7 @@
 
 
 <div id="currentissue">
-<table cellpadding="0" cellspacing="0" border="0" bgcolor="#E2E6EF">
+<table cellpadding="0" cellspacing="0" border="0" bgcolor="#f3dfeb">
 	<tbody><tr>
 		<td colspan="3"><img src="images/titles/privacy.gif" height="35"></td>
 	</tr>
@@ -107,7 +119,7 @@
 		<table cellspacing="0" cellpadding="0" border="0">
 			<tbody><tr>
 				<td width="4" rowspan="3"><img src="images/transdot.gif" height="1" width="4"></td>
-				<td rowspan="2" colspan="2"><a href="subscribe.html"><img src="magazines/current/51.jpg" alt="OK" title="OK Magazine" width="203" style="border: 1px solid #fff;" border="0"></a></td>	
+				<td rowspan="2" colspan="2"><a href="subscribe.html"><img src="magazines/current/77.jpg" alt="OK" title="OK Magazine" width="203" style="border: 1px solid #fff;" border="0"></a></td>	
 				<td width="8"><img src="images/magbgtop.gif" width="8" height="8"></td>
 			</tr>
 			<tr>
@@ -122,34 +134,39 @@
 		</td>
 	</tr>
 	<tr>
-		<td width="25" rowspan="4"><img src="images/transdot.gif" width="25" height="12"></td>
+		<td width="25" rowspan="2"><img src="images/transdot.gif" width="25" height="12"></td>
 		<td><img src="images/transdot.gif" width="8" height="12"></td>
-		<td width="29" rowspan="4"><img src="images/transdot.gif" width="29" height="12"></td>
-	</tr>
-	<tr>
-		<td><img src="images/transdot.gif" width="8" height="9"></td>
+		<td width="29" rowspan="2"><img src="images/transdot.gif" width="29" height="12"></td>
 	</tr>
 	
 	
 	
+	
 	<tr>
-		<td></td>
-	</tr>
-	<tr>
-		<td></td>
+		<td align="center">
+			<table cellpadding="0" cellspacing="3" width="80%" border="0">
+				<tbody><tr>
+					<td bgcolor="#5858a6" height="35" align="center"><h2><a href="current_issue.html">TAKE A LOOK INSIDE<br>THIS ISSUE!</a></h2></td>
+				</tr>
+				<tr>
+					<td><img src="images/transdot.gif" width="8" height="5"></td>
+				</tr>
+				<tr>
+					<td>OK! magazine brings you the biggest stories, the best photographs, amazing celeb exclusives and the hottest stars - every week!</td>
+				</tr>
+				<tr>
+					<td><img src="images/transdot.gif" width="8" height="5"></td>
+				</tr>
+			</tbody></table>
+		</td>
 	</tr>
 	
 	
 	
-	<tr>
-		<td colspan="3"><img src="images/transdot.gif" width="8" height="18"></td>
-	</tr>
-	<tr>
-		<td colspan="3" align="center"><a href="http://www.ok-magazine.com/survey/" target="_blank" style="font-size:16px; color:#333366; line-height:18px;">Click here to enter<br> our Reader Survey</a></td>
-	</tr>
-	<tr>
-		<td colspan="3"><img src="images/transdot.gif" width="8" height="38"></td>
-	</tr>
+	
+	
+	
+	
 </tbody></table>
 </div></td>
 						<td colspan="2" valign="top" background="images/titlebg.gif"><img src="images/transdot.gif" height="35"></td>
@@ -159,10 +176,10 @@
 						<td width="429" valign="top">
 						<table width="100%" border="0" cellspacing="0" cellpadding="0">
 							<tbody><tr>
-								<td class="headline"><img src="images/logo_small.gif" hspace="3" vspace="1" align="absmiddle"> PRIVACY POLICY</td>
+								<td class="headline"><img src="images/privacypolicyforok.gif" width="253" height="26"></td>
 							</tr>
 							<tr>
-								<td><img src="images/transdot.gif" width="1" height="3"></td>
+								<td><img src="images/transdot.gif" width="1" height="10"></td>
 							</tr>
 							<tr>
 								<td>Northern and Shell Plc is committed to your right to Privacy and will only use your data as set in our privacy policy below. Please read this information carefully.  By using the Site you agree to us collecting and using your personal information with the details below.<br>
@@ -245,7 +262,7 @@ us on OK! Magazine / Northern &amp; Shell North America Ltd, 475 Fifth Avenue, N
 		<td width="18" align="center">|</td>
 		<td width="57"><a href="#" onclick="window.open('netro42.html','','width=325,height=120,scrollbars=yes')" title="Site designed by Netro42">Site Credits</a></td>
 		<td width="18" align="center">|</td>
-		<td width="300">©2005 OK! Magazine - A Northern &amp; Shell North America Ltd publication</td>
+		<td>©2006 OK! Magazine - A Northern &amp; Shell North America Ltd publication</td>
 		<td>&nbsp;</td>
 	</tr>
 </tbody></table>
